2008-08-25  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Object-oriented redesign of export algorithm. (No printing yet)
 * stripName method for all ModelSpecific sub-classes. Strips file extionsions
   and other non-name data (like icons) from name strings.


2008-08-24  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Added support for YAMAHA PSR-S700.
 * Refactored MainWindow class. Tab-classes do now create their widgets
   on their own. The MainWindow object doesn't hold a reference to the tab's
   widgets anymore.
 * Splited credits string so that translation works.
 * Implemented paragmatic prevention of renaming a dummy entry (### EMPTY ###)
   for import tab.
 * Implemented "Quick Rename" tab.
 * Partialy implemented "Print setlist" tab.
 * Prepared batch dialog for grouping registrations which go together.


2008-08-21  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Pragmatic fix for missing button images in Windows version. (overriding
   the default behaviour of the gtkrc file because the user most probably
   wouldn't want to deal with that.)
 * TAG: Version 0.2
 * Marked PSR-2000 description as translatable. (Thanks Claudio for letting
   me know.)


2008-08-20  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Updated documentation including first version of the README file and the
   man page.

2008-08-19  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Finished batch processing.
 * Fixed bug: Wrong length byte of Yamaha Tyros style registrations. Length
   bytes don't include the registration header.
 * Changed behaviour of import page. List of known file extension gets
   derived from BankFile classes now.
 * Removed unnecessary check which disallows changing the data
   directory to itself.
 * Fixed minor bugs with missing filter updates and checking allowed buttons
   in create bank page for certain scenarios.