@@ -1,3 +1,8 @@
+2008-08-29  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>
+
+ * Finished setlist export and printing.
+
+
 2008-08-25  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>
 
  * Object-oriented redesign of export algorithm. (No printing yet)
